# api-client

./: .buildinfo  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree
.doctrees/_autosummary/: atomicds.client.Client.doctree  atomicds.client.doctree  atomicds.results.doctree  atomicds.results.rheed_image.RHEEDImageCollection.doctree  atomicds.results.rheed_image.RHEEDImageResult.doctree  atomicds.results.rheed_image.doctree  atomicds.results.rheed_video.RHEEDVideoResult.doctree  atomicds.results.rheed_video.doctree  atomicds.results.xps.XPSResult.doctree  atomicds.results.xps.doctree
.github/workflows/: linting.yml  release.yaml  release.yml  testing.yml  tests.yaml  upgrade_dependencies.yml
_autosummary/: atomicds.client.Client.html  atomicds.client.html  atomicds.results.html  atomicds.results.rheed_image.RHEEDImageCollection.html  atomicds.results.rheed_image.RHEEDImageResult.html  atomicds.results.rheed_image.html  atomicds.results.rheed_video.RHEEDVideoResult.html  atomicds.results.rheed_video.html  atomicds.results.xps.XPSResult.html  atomicds.results.xps.html
_modules/: index.html
_modules/atomicds/: client.html
_modules/atomicds/results/: rheed_image.html  rheed_video.html  xps.html
_sources/: index.rst.txt  modules.rst.txt
_sources/_autosummary/: atomicds.client.Client.rst.txt  atomicds.results.rheed_image.RHEEDImageCollection.rst.txt  atomicds.results.rheed_image.RHEEDImageResult.rst.txt  atomicds.results.rheed_image.rst.txt  atomicds.results.rheed_video.RHEEDVideoResult.rst.txt  atomicds.results.rheed_video.rst.txt  atomicds.results.rst.txt  atomicds.results.xps.XPSResult.rst.txt
docs/: conf.py
docs/_autosummary/: atomicds.client.rst  atomicds.results.rheed_image.RHEEDImageCollection.rst  atomicds.results.rheed_image.RHEEDImageResult.rst  atomicds.results.rheed_video.RHEEDVideoResult.rst  atomicds.results.xps.XPSResult.rst  atomicds.results.xps.rst
examples/vxwse2-placeholder/: task1_films.ipynb  task1_sapphire.ipynb  task2_composition.ipynb
requirements/: requirements-macos-latest_py3.10.txt  requirements-macos-latest_py3.10_extras.txt  requirements-macos-latest_py3.11.txt  requirements-macos-latest_py3.11_extras.txt  requirements-macos-latest_py3.9.txt  requirements-macos-latest_py3.9_extras.txt  requirements-macos_py3.11.txt  requirements-ubuntu-latest_py3.10.txt  requirements-ubuntu-latest_py3.10_extras.txt  requirements-ubuntu-latest_py3.11.txt  requirements-ubuntu-latest_py3.11_extras.txt  requirements-ubuntu-latest_py3.9.txt  requirements-ubuntu-latest_py3.9_extras.txt  requirements-windows-latest_py3.10.txt  requirements-windows-latest_py3.10_extras.txt  requirements-windows-latest_py3.11.txt  requirements-windows-latest_py3.11_extras.txt  requirements-windows-latest_py3.9.txt  requirements-windows-latest_py3.9_extras.txt
src/atomicds/: __init__.py  client.py
src/atomicds/core/: __init__.py  client.py  utils.py
src/atomicds/results/: __init__.py  rheed_image.py  rheed_video.py  xps.py
tests/: conftest.py  test_client.py  test_core.py  test_rheed_image.py  test_rheed_video.py
